add logic for hiding blocks if no recently earned points/badges/grades exist and refined styling

--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -230,6 +230,7 @@
 /* Styles weekly stats module */
 .weekly-stats-module
   font-size: 0.8rem
+  text-align: center
   .module-section
     margin-bottom: 1rem
   p
