--- a/app/views/students/dashboard/_dashboard_since_last_login.haml
+++ b/app/views/students/dashboard/_dashboard_since_last_login.haml
@@ -2,23 +2,24 @@
   %h3 Weekly Stats
 .card-body.weekly-stats-module
   .module-section
-    %p 
-      Total points earned this week:
-      =number_with_delimiter(current_student.points_earned_for_course_this_week(current_course))
+    - if current_student.points_earned_for_course_this_week(current_course).present?
+      %p Total points earned this week:
+      %p= number_with_delimiter(current_student.points_earned_for_course_this_week(current_course))
 
   .module-section
-    %p Grades received this week:
-    %ul
-      - current_student.grades_released_for_course_this_week(current_course).each do |grade|
-        %li
-          #{link_to grade.assignment.name, grade.assignment}:
-          %span= number_with_delimiter(grade.final_points)
+    - if current_student.grades_released_for_course_this_week(current_course).any?
+      %p Grades received this week:
+      %ul
+        - current_student.grades_released_for_course_this_week(current_course).each do |grade|
+          %li
+            #{link_to grade.assignment.name, grade.assignment}:
+            %span #{number_with_delimiter(grade.final_points)} points earned
 
   .module-section
-    - if current_course.has_badges?
+    - if current_course.has_badges? && current_student.earned_badges_for_course_this_week(current_course).any?
       %p #{term_for :badges} earned this week:
       %ul
         - current_student.earned_badges_for_course_this_week(current_course).each do |badge|
           %li
             %img{:src => badge.icon, :width => 25 }
-            %span #{badge.name} #{term_for :badge} earned
+            %span #{badge.name} #{(term_for :badge).downcase} earned
