--- a/app/views/students/_student_dashboard.html.haml
+++ b/app/views/students/_student_dashboard.html.haml
@@ -5,7 +5,7 @@
   - if @events.present?
     .panel.dashboard-module= render partial: "students/dashboard/dashboard_course_events"
 
-  .panel.dashboard-module= render partial: "students/dashboard/dashboard_since_last_login"
+  .panel.dashboard-module= render partial: "students/dashboard/dashboard_weekly_stats", locals:  { presenter: Students::DashboardWeeklyStatsPresenter.new(course: current_course, student: current_student) }
 
   - if current_course.student_weighted?
     .panel.dashboard-module= render partial: "students/dashboard/dashboard_assignment_weights"
