--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -231,17 +231,25 @@
 .weekly-stats-module
   font-size: 0.8rem
   text-align: center
+
   .module-section
     margin-bottom: 1rem
+
+  .week-points
+    font-size: 1.25rem
+    font-weight: 600
+
   p
     margin: 0
     font-size: 0.9rem
     font-weight: 400
+
   ul
     list-style: none
     padding: 0
-    margin-top: .25rem
+    margin: 0
     font-weight: 300
+
   img
     vertical-align: middle
 
