added indent and class to empty message

--- a/app/views/students/dashboard/_dashboard_weekly_stats.haml
+++ b/app/views/students/dashboard/_dashboard_weekly_stats.haml
@@ -25,5 +25,5 @@
               %img{:src => badge.icon, :width => 25 }
               %span #{badge.name} #{(term_for :badge).downcase} earned
   - else
-    .module-section
+    .module-section.dashboard-message
       %p You have not earned anything in the last week!
