added dashboard message class

--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -86,7 +86,7 @@
     a
       font-weight: 400
 
-  .my-planner-alert
+  .dashboard-message
     background-color: transparentize($color-blue-4, .8)
     padding: 2rem
     text-align: center
