--- a/app/views/students/dashboard/_dashboard_course_events.haml
+++ b/app/views/students/dashboard/_dashboard_course_events.haml
@@ -15,7 +15,6 @@
             %p
               = truncate(sanitize(event.description, :tags => %w(br a)), :length => 200, :omission => "...")
               = link_to "Read More", event
-          .assignments-due
-            %ul
-              - presenter.assignments_due_on(event).each do |assignment|
-                %li= link_to assignment.name, assignment
+          %ul.assignments-due
+            - presenter.assignments_due_on(event).each do |assignment|
+              %li= link_to assignment.name, assignment
