styled assignment due list items

--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -204,7 +204,7 @@
 
 .slider-direction-button
   position: absolute
-  top: 8%
+  top: 6%
   display: block
   font-size: 0.8rem
   width: 1.2rem
@@ -227,31 +227,16 @@
   &.previous
     left: 5px
 
-/* Styles weekly stats module */
-.weekly-stats-module
-  font-size: 0.8rem
-  text-align: center
+ul.assignments-due
+  padding: 0
+  list-style: none
 
-  .module-section
-    margin-bottom: 1rem
-
-  .week-points
-    font-size: 1.25rem
-    font-weight: 600
-
-  p
-    margin: 0
-    font-size: 0.9rem
-    font-weight: 400
-
-  ul
-    list-style: none
-    padding: 0
-    margin: 0
+  li
+    border-left: 3px solid $color-orange-1
+    padding: .25rem 1rem
+    margin: .25rem 0
     font-weight: 300
-
-  img
-    vertical-align: middle
+    font-size: 0.8rem
 
 @media (max-width: $media-small-max)
   #student-dashboard
