--- a/app/views/students/dashboard/_dashboard_badges.haml
+++ b/app/views/students/dashboard/_dashboard_badges.haml
@@ -2,7 +2,7 @@
   .card-header
     %h3= term_for :badges
   .card-body
-    %ul.block-grid
+    %ul.badge-grid
       - cache multi_cache_key :student_dashboard_badges, current_student, current_course do
         - current_student.unique_student_earned_badges(current_course).includes(:unlock_conditions).each do |badge|
           %li= sidebar_earned_badge badge, current_student
