mobile styling revisions to menu and events mod

--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -207,7 +207,7 @@
 
 .slider-direction-button
   position: absolute
-  top: 6%
+  top: 2%
   display: block
   font-size: 0.8rem
   width: 1.2rem
@@ -247,3 +247,16 @@ ul.assignments-due
 
     .col-30, .col-40
       width: 100%
+      margin: 0
+
+  .slick-slide
+    padding: 0.2rem 0.5rem
+
+    .event-date, .event-name
+      padding: 0 1.25rem
+
+    img
+      max-width: 128px
+      float: none
+      margin: 0 auto
+      padding: 0
