--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -273,9 +273,8 @@ ul.subnav.logged-out
       color: $color-blue-3
       text-transform: uppercase
       font-size: 1rem
+      font-weight: 400
       padding: .25rem 0 .25rem .5rem
-      font-style: Light-Weight
-      font-weight: normal
 
     hr
       border: none
@@ -284,7 +283,7 @@ ul.subnav.logged-out
       width: 100%
 
     input[type=text]
-      width: 220px
+      width: 235px
 
     a.button
       color: $color-white
