--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -241,6 +241,33 @@ ul.assignments-due
     font-weight: 300
     font-size: 0.8rem
 
+  /* Styles weekly stats module */
+.weekly-stats-module
+   font-size: 0.8rem
+   text-align: center
+
+   .module-section
+     margin-bottom: 1rem
+
+   .week-points
+     font-size: 1.25rem
+     font-weight: 600
+
+   p
+     margin: 0
+     font-size: 0.9rem
+     font-weight: 400
+
+   ul
+     list-style: none
+     padding: 0
+     margin: 0
+     font-weight: 300
+
+   img
+     vertical-align: middle
+     margin-bottom: .25rem
+
 @media (max-width: $media-small-max)
   #student-dashboard
     flex-direction: column
