rearranged dashboard modules and put max height on weekly stats

--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -245,6 +245,8 @@ ul.assignments-due
 .weekly-stats-module
    font-size: 0.8rem
    text-align: center
+   max-height: 250px
+   overflow-y: auto
 
    .module-section
      margin-bottom: 1rem
