Removed bullets for list items in assignment form, added descriptor to hidden names, Rubocop -11

--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -298,3 +298,6 @@ input#grade_pass_fail_status:checked + label:before
 input#grade_pass_fail_status:checked + label:after
   left: 30px
   box-shadow: inset 0 0 0 1px $color-grey-5
+
+ul.locked-display li
+  list-style: none
