--- a/app/views/layouts/_unlock_condition_fields.haml
+++ b/app/views/layouts/_unlock_condition_fields.haml
@@ -1,7 +1,7 @@
 .conditions
   %h4 Requirement
   .assignment-or-badge
-    = f.input :condition_type, :collection => ["Assignment", "Badge"], :label => "Type"
+    = f.input :condition_type, :collection => ["Assignment", "Badge", "Course"], :label => "Type"
   #assignments-list{:style => "display: none"}
     = f.input :condition_id, :collection => current_course.assignments.map { |l| [l.name,l.id] }, :include_blank => true, :label => "#{term_for :assignment}"
     = f.input :condition_state, :collection => ["Submitted", "Grade Earned", "Feedback Read", "Passed"], :label => "State Achieved"
@@ -12,6 +12,11 @@
     = f.input :condition_state, :collection => ["Earned"], :label => "State Achieved"
     = f.input :condition_value, :label => "Number of Times Earned"
     = f.input :condition_date, as: :string, :include_blank => true, :input_html => { class: "datetimepicker", :value => f.try(:condition_date) }, :label => "Done By"
+  #courses-list{:style => "display: none"}
+    = f.input :condition_value, :label => "Points Earned"
+    = f.input :condition_date, as: :string, :include_blank => true, :input_html => { class: "datetimepicker", :value => f.try(:condition_date) }, :label => "Done By"
+    = f.hidden_field :condition_state, :value => "Earned"
+    = f.hidden_field :condition_id, :value => current_course.id
   .right
     = f.hidden_field :_destroy, class: "destroy"
     = link_to "Delete Condition", "#", class: "remove-unlock-condition button right"
