--- a/app/views/submissions/_submission_content.haml
+++ b/app/views/submissions/_submission_content.haml
@@ -1,5 +1,5 @@
 // Allow students to edit the submission if that's still possible
-= render partial: "submissions/components/edit", locals: { presenter: presenter } if presenter.open_for_editing?
+= render partial: "submissions/components/edit", locals: { presenter: presenter } if presenter.open_for_editing?(current_student)
 
 // Displaying when the assignment was submitted and if it was late/resubmitted
 = render partial: "submissions/components/dates_and_state", locals: { presenter: presenter }
