--- a/app/views/assignments/_buttons.html.haml
+++ b/app/views/assignments/_buttons.html.haml
@@ -9,24 +9,22 @@
       %li= link_to glyph(:copy) + "Copy", copy_assignments_path(id: presenter.assignment), method: :copy
       - if presenter.assignment.has_groups?
         %li= link_to glyph(:users) + "Create #{term_for :group}", new_group_path
-      - if presenter.for_team?
-        %li= link_to glyph(:check) + "Quick Grade", mass_edit_assignment_grades_path(presenter.assignment, team: presenter.team)
-      - else
-        %li= link_to glyph(:check) + "Quick Grade", mass_edit_assignment_grades_path(presenter.assignment)
+      - if !presenter.grade_with_rubric?
+        - if presenter.for_team?
+          %li= link_to glyph(:check) + "Quick Grade", mass_edit_assignment_grades_path(presenter.assignment, team: presenter.team)
+        - else
+          %li= link_to glyph(:check) + "Quick Grade", mass_edit_assignment_grades_path(presenter.assignment)
 
-      - if presenter.team
-        %li= link_to glyph("file-zip-o") + "Download Team Submissions", submissions_exports_path(assignment_id: presenter.assignment.id, team_id: presenter.team.id), method: :post
-      - else
-        %li.hide-for-small= link_to glyph("file-zip-o") + "Download All Submissions", submissions_exports_path(assignment_id: presenter.assignment.id), method: :post
+      - if presenter.assignment.accepts_submissions?
+        - if presenter.team
+          %li= link_to glyph("file-zip-o") + "Download Team Submissions", submissions_exports_path(assignment_id: presenter.assignment.id, team_id: presenter.team.id), method: :post
+        - else
+          %li.hide-for-small= link_to glyph("file-zip-o") + "Download All Submissions", submissions_exports_path(assignment_id: presenter.assignment.id), method: :post
 
       %li.hide-for-small
         %a{:href => import_assignment_grades_path(presenter.assignment) }
           = glyph(:upload)
           Import Grades
-      %li.hide-for-small
-        %a{href: export_assignment_grades_path(presenter.assignment, format: :csv) }
-          = glyph(:download)
-          Download Grades
       %li.hide-for-small
         %a{:href => design_assignment_rubric_path(presenter.assignment) }
           = glyph(:sliders)
@@ -34,21 +32,7 @@
             Edit Rubric
           - else
             Create Rubric
-
-      - if presenter.grade_with_rubric?
-        - if presenter.grades.present?
-          %li
-            %a{href: export_earned_levels_assignment_grades_path(presenter.assignment, format: :csv) }
-              Download Rubric Grades
         - if presenter.has_reviewable_grades?
           %li
             %a{href: assignment_grades_path(presenter.assignment) }
               Review Grades
-        %li.on(ng-cloak ng-show="useRubric")
-          %a(ng-click="rubricsOff()")
-            = glyph("power-off")
-            Rubric is On
-        %li.off(ng-cloak ng-hide="useRubric")
-          %a(ng-click="rubricsOn()")
-            = glyph("power-off")
-            Rubric is Off
