--- a/app/views/assignments/individual/_individual_show.haml
+++ b/app/views/assignments/individual/_individual_show.haml
@@ -1,7 +1,7 @@
 = team_filter(presenter.teams) if presenter.has_teams? && presenter.individual_assignment?
 
 - if presenter.assignment.grades.any?
-  .clear
+  .clear.right
     = simple_form_for presenter.assignment, :url => delete_all_assignment_grades_path(assignment_id: presenter.assignment.id), method: :delete do |f|
       .submit-buttons
         %button{ :type => "submit", class: "button button-slim", data: { confirm: "Are you sure you want to delete all grades for this assignment?" } }
