Cleaned up analytics nav

--- a/app/views/analytics/students.html.haml
+++ b/app/views/analytics/students.html.haml
@@ -1,4 +1,4 @@
-= content_nav_for :analytics_root, "#{term_for :students}"
+= content_nav_for :analytics_root, "System Analytics"
 
 %h3.pagetitle= @title
 
