add sass file for offscreen nav

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -43,6 +43,7 @@
   *= require _forms
   *= require _froala
   *= require _newsletter
+  *= require _offscreen_sidebar
   *= require _predictor
   *= require _grades
   *= require _badges
