made partial for student search and moved course search back to staff sidebar from header on instructor side. also made these divs instead of list items

--- a/app/assets/stylesheets/_staff_sidebar.sass
+++ b/app/assets/stylesheets/_staff_sidebar.sass
@@ -49,16 +49,14 @@
 
 /* Styling of search fields in staff-sidenav and mobile nav */
 .sidebar-container, .sidebar, ul.nav.nav-pill
-  li.has-form
-    margin-top: .5rem
+  .has-form
+    display: inline-block
 
   input[type=text]
     height: 1.7rem
     border: 0
-    float: left
     padding: 5px
     width: 188px
-    margin-bottom: .75rem
     border-top-left-radius: $global-radius
     border-bottom-left-radius: $global-radius
 
