--- a/app/views/layouts/navigation/_offscreen_sidebar.haml
+++ b/app/views/layouts/navigation/_offscreen_sidebar.haml
@@ -4,8 +4,8 @@
       %span.course= "#{current_course.courseno} "
       %span.course_name= "#{current_course.name} "
       %span.course_semester= "#{current_course.try(:semester)} #{current_course.try(:year)}"
-    %ul= render partial: "layouts/navigation/course_search"
     - if current_user_is_student?
+      = render partial: "layouts/navigation/course_search"
       = render partial: "students/student_profile_tabs"
     - elsif current_user_is_staff?
       = render partial: "layouts/navigation/staff_subnav"
