--- a/app/assets/stylesheets/_staff_sidebar.sass
+++ b/app/assets/stylesheets/_staff_sidebar.sass
@@ -5,6 +5,7 @@
 .sidebar-container
   width: 220px
   float: left
+  margin-top: .8rem
   padding: .75rem 1rem
   background-color: $color-blue-2
   opacity: .9
@@ -49,8 +50,9 @@
 
 /* Styling of search fields in staff-sidenav and mobile nav */
 .sidebar-container, .sidebar, ul.nav.nav-pill
-  .has-form
+  p.has-form
     display: inline-block
+    margin: 0 0 .75rem 0
 
   input[type=text]
     height: 1.7rem
