--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -110,15 +110,18 @@ ul.subnav.logged-out
 
     .my-account
       margin-left: .25rem
+
     .course-info-btn
       margin-right: .25rem
+
     ul.typeahead.dropdown-menu.course-result
       width: 185px
       padding: 0
       font-size: .8rem
       li
-        padding: 0
+        padding: .5rem
         margin: 0
+
   .the-nav .nav-pill.left
     height: 45px
     overflow: hidden
