--- a/app/views/layouts/navigation/_student_search.haml
+++ b/app/views/layouts/navigation/_student_search.haml
@@ -1,4 +1,4 @@
-.has-form{role: "search"}
+%p.has-form{role: "search"}
   %label.sr-only{:for => "search-input"}
     Search #{term_for :students}
   %input#student-search.students-search-query.search-input{ data: { autocompleteUrl: autocomplete_student_name_students_path }, type: "text", placeholder: "Search #{term_for :students}", label: false }
